--- a/src/com/mypos/sales/view/SalesPanel.form
+++ b/src/com/mypos/sales/view/SalesPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1030, 670]"/>
@@ -74,7 +74,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="7" rowCount="0">
                 <Column editable="true" title="Id Transaction" type="java.lang.Object"/>
-                <Column editable="true" title="Id User" type="java.lang.Object"/>
+                <Column editable="true" title="UserName" type="java.lang.Object"/>
                 <Column editable="true" title="Receipt Number" type="java.lang.Object"/>
                 <Column editable="true" title="Total Amount" type="java.lang.Object"/>
                 <Column editable="true" title="Amount Paid" type="java.lang.Object"/>
