--- a/src/com/mypos/dashboard/view/DashboardPanel.form
+++ b/src/com/mypos/dashboard/view/DashboardPanel.form
@@ -92,7 +92,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="33" red="66" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Welcome, Admin"/>
+        <Property name="text" type="java.lang.String" value="Welcome,Bos"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel2">
