--- a/src/com/mypos/cashier/view/CashierPanel.form
+++ b/src/com/mypos/cashier/view/CashierPanel.form
@@ -52,12 +52,10 @@
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="ScanBtn" min="-2" pref="42" max="-2" attributes="0"/>
-                      <Component id="InputBarcode" max="32767" attributes="0"/>
-                  </Group>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="ScanBtn" min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="CheckoutSale" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="InputBarcode" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="7" max="32767" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="408" max="-2" attributes="0"/>
@@ -91,7 +89,6 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Input barcode.."/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="InputBarcodeActionPerformed"/>
